@@ -1,5 +1,6 @@
 import java.util.Arrays;
 import java.util.StringTokenizer;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class ServiceChatInput implements IPacketChatOutput{
@@ -83,7 +84,7 @@ public class ServiceChatInput implements IPacketChatOutput{
         if (packet.getFlag()!=PacketChat.ENCRYPTION_FLAG && (message=new String(packet.getField(1))).startsWith("/")){
             StringTokenizer tokens=new StringTokenizer(message," ");
             String command=tokens.nextToken().substring(1).toLowerCase();
-            String args=tokens.hasMoreTokens()?tokens.nextToken("").strip():"";
+            String args=tokens.hasMoreTokens()?tokens.nextToken("").trim():"";
             
             switch (client.getUser().getTag()){
                 case User.ADMIN_TAG:
@@ -105,7 +106,7 @@ public class ServiceChatInput implements IPacketChatOutput{
             }else{
                 ServerChatManager.getInstance().getClientsByName(IntStream.range(2, fieldsNumber).mapToObj(index -> {
                     return new String(packet.getField(index));
-                }).toList()).getOutput().sendPacket(packet);
+                }).collect(Collectors.toList())).getOutput().sendPacket(packet);
             }
         }
     }
